# Workshops_Software_modeling

./: README.md
Workshop 1/: README.md  Technical Report.docx  arcade_machine_shop.py  cli.py  purchase.txt  pyproject.toml
Workshop 2/: main.py  purchasemanager.py  users.py  videogames.py
Workshop 2/src/: machines.py  main.py  purchasemanager.py  users.py  videogames.py  videogamescatalog.py
