[tool.poetry]
name = "catalogarcademachine"
version = "0.1.1"
description = "This is a catalog of arcade machines in python"
authors = ["Cgamez28 <cristiangameznunez@gmail.com>"]
license = "GNU/GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
